# tradeathena

./: .env.example  .gitignore  Cargo.toml  Design.md  LICENSE  README-cn.md  README-zh.md  README.md  REAL-TRADING-ROADMAP.md  Requirements.md  pyproject.toml  requirements.txt  run.sh
backend/: __init__.py  app_state.py  auth_deps.py  config.py  database.py  main.py  models.py
backend/routes/: account.py  admin.py  auth.py  market.py  orders.py  positions.py
backend/services/: binance.py  forex_client.py  gold_client.py  market.py  news.py  okx.py  simulator.py  symbol_info.py
backend/ws/: manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  websocket.ts
frontend/src/components/: AccountInfo.tsx  AdminPanel.tsx  ErrorBoundary.tsx  HistoryTable.tsx  LoginPage.tsx  MarketWatch.tsx  OrderBook.tsx  OrderPanel.tsx  OrdersTable.tsx  PositionsTable.tsx  StrategyPanel.tsx  TopBar.tsx  TradingChart.tsx  TradingPage.tsx
frontend/src/utils/: indicators.ts  strategy.ts
src/: lib.rs  matching.rs  types.rs
