[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "toptrader-core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "toptrader_core"
